--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="/assets/marvel/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/marvel/css/unicons.css">
-    <link rel="stylesheet" href="/assets/marvel/css/owl.carousel.min.css">
+
     <link rel="stylesheet" href="/assets/marvel/css/owl.theme.default.min.css">
 
     <!-- MAIN STYLE MARVEL -->
@@ -29,7 +29,8 @@
     rel="stylesheet">
 
  
-  <!-- Vendor CSS Files -->
+  <!-- 
+  <link href="/assets/p   Vendor CSS Files -->
   <link href="/assets/portfolio//assets/portfolio/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="/assets/portfolio//assets/portfolio/vendor/line-awesome/css/line-awesome.min.css" rel="stylesheet">
   <link href="/assets/portfolio//assets/portfolio/vendor/aos/aos.css" rel="stylesheet">
@@ -42,7 +43,7 @@
     <!-- MENU -->
     <nav class="navbar navbar-expand-sm navbar-light">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><i class='uil uil-user'></i> Marvel</a>
+            <a class="navbar-brand" href="/"><i class='uil uil-user'></i> Marvel</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -54,27 +55,29 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a href="#about" class="nav-link"><span data-hover="About">About</span></a>
+                        <a href="/me" class="nav-link"><span data-hover="About">About</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#project" class="nav-link"><span data-hover="Projects">Projects</span></a>
+                        <a href="/education" class="nav-link"><span data-hover="Education">Education</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#resume" class="nav-link"><span data-hover="Resume">Resume</span></a>
+                        <a href="/experience" class="nav-link"><span data-hover="Experience">Experience</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contact" class="nav-link"><span data-hover="Contact">Contact</span></a>
+                        <a href="/projects" class="nav-link"><span data-hover="Projects">Projects</span></a>
                     </li>
+                    <li class="nav-item">
+                      <a href="/certifications" class="nav-link"><span data-hover="Certifications">Certifications</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="/volunteering" class="nav-link"><span data-hover="Volunteering">Volunteering</span></a>
+                </li>
+                <li class="nav-item">
+                  <a href="/contact" class="nav-link"><span data-hover="Contact">Contact</span></a>
+              </li>
                 </ul>
 
-                <ul class="navbar-nav ml-lg-auto">
-                    <div class="ml-lg-4">
-                      <div class="color-mode d-lg-flex justify-content-center align-items-center">
-                        <i class="color-mode-icon"></i>
-                        Color mode
-                      </div>
-                    </div>
-                </ul>
+                
             </div>
         </div>
     </nav>
@@ -89,8 +92,8 @@
                <div class="row">
 
                     <div class="col-lg-12 col-12">                                
-                        <p class="copyright-text text-center">Copyright &copy; 2019 Company Name . All rights reserved</p>
-                        <p class="copyright-text text-center">Designed by <a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a></p>
+                        <p class="copyright-text text-center">Copyright &copy; 2024 Emilio Luna . All rights reserved</p>
+                        <p class="copyright-text text-center">Designed by <a  href="https://emilioenlaluna.web.app/">@emilioenlaluna</a></p>
                     </div>
                     
                </div>
@@ -102,7 +105,6 @@
     <script src="/assets/marvel/js/bootstrap.min.js"></script>
     <script src="/assets/marvel/js/Headroom.js"></script>
     <script src="/assets/marvel/js/jQuery.headroom.js"></script>
-    <script src="/assets/marvel/js/owl.carousel.min.js"></script>
     <script src="/assets/marvel/js/smoothscroll.js"></script>
     <script src="/assets/marvel/js/custom.js"></script>
 
@@ -112,10 +114,9 @@
   <script src="/assets/portfolio/vendor/jquery/jquery-migrate.min.js"></script>
   <script src="/assets/portfolio/vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="/assets/portfolio/vendor/easing/easing.min.js"></script>
-  <script src="/assets/portfolio/vendor/php-email-form/validate.js"></script>
   <script src="/assets/portfolio/vendor/isotope/isotope.pkgd.min.js"></script>
   <script src="/assets/portfolio/vendor/aos/aos.js"></script>
-  <script src="/assets/portfolio/vendor/owlcarousel/owl.carousel.min.js"></script>
+
 
   <!-- Template Main JS File -->
   <script src="/assets/portfolio/js/main.js"></script>
